test/Fail/Issue1643.err
Issue1643.agda:18.8-9: error: [UnequalTypes]
The type
  N.A
is not a subtype of
  Set
when checking that the expression a has type Set
